--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,8 +12,11 @@
         android:id="@+id/btedit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
         android:text="@string/Editbt"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btdelete"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvfechaedit" />
 
@@ -23,11 +26,11 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/nombre"
+        android:importantForAutofill="no"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:importantForAutofill="no" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <EditText
@@ -36,12 +39,12 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/url"
+        android:importantForAutofill="no"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvnombreedit"
-        android:importantForAutofill="no" />
+        app:layout_constraintTop_toBottomOf="@+id/tvnombreedit" />
 
     <EditText
         android:id="@+id/tvestadoedit"
@@ -49,11 +52,11 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/estado"
+        android:importantForAutofill="no"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvprecioedit"
-        android:importantForAutofill="no" />
+        app:layout_constraintTop_toBottomOf="@+id/tvprecioedit" />
 
     <EditText
         android:id="@+id/tvprecioedit"
@@ -61,11 +64,11 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/precio"
+        android:importantForAutofill="no"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvurledit"
-        android:importantForAutofill="no" />
+        app:layout_constraintTop_toBottomOf="@+id/tvurledit" />
 
     <EditText
         android:id="@+id/tvfechaedit"
@@ -73,26 +76,28 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/fecha"
+        android:importantForAutofill="no"
         android:inputType="date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvestadoedit"
-        android:importantForAutofill="no" />
+        app:layout_constraintTop_toBottomOf="@+id/tvestadoedit" />
 
     <Button
         android:id="@+id/btdelete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
         android:text="@string/borrarbt"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btedit" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/btedit"
+        app:layout_constraintTop_toBottomOf="@+id/tvfechaedit" />
 
     <Button
         android:id="@+id/btvolveredit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Volver"
+        android:text="@string/volverbt"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btdelete" />
 
