--- a/app/src/main/res/layout/fragment_lista_admin.xml
+++ b/app/src/main/res/layout/fragment_lista_admin.xml
@@ -5,14 +5,16 @@
     android:id="@+id/Constraint"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.fragment.ListaFragment">
+    tools:context=".view.fragment.ListaAdminFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/li"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="269dp"
-        tools:layout_editor_absoluteY="186dp" />
+        android:layout_marginTop="36dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
         android:id="@+id/tverror"
@@ -30,4 +32,13 @@
         android:text="@string/volverbt"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Para editar o eliminar algun elemento de la lista solo tienes que tocarlo."
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
